# Geyago

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  config.example.json  pyproject.toml
.bmad-core/: install-manifest.yaml
.serena/: project.yml
frontend/: README.md  components.d.ts  index.html  package-lock.json  package.json  start-dev.sh  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/components/: AITestDialog.vue  ModelManagementDialog.vue  QuestionForm.vue
frontend/src/layout/: index.vue
frontend/src/router/: index.ts
frontend/src/stores/: ai.ts  app.ts  question.ts
frontend/src/views/: Dashboard.vue
frontend/src/views/ai/: AITest.vue  ProviderList.vue
frontend/src/views/config/: SystemConfig.vue
frontend/src/views/questions/: QuestionAdd.vue  QuestionList.vue
src/geyago/: __main__.py  main.py
src/geyago/api/routes/: query.py
src/geyago/api/schemas/: query.py
src/geyago/config/: settings.py
src/geyago/core/: database.py  exceptions.py
src/geyago/models/: question.py
src/geyago/services/: ai_service.py  ai_service_manager.py  qa_service.py
src/geyago/services/ai_providers/: __init__.py  ali.py  base.py  factory.py  gemini.py  ollama.py  openai_compatible.py
src/geyago/utils/: helpers.py
tests/: conftest.py  test_api.py
